--- a/memoria.ipynb
+++ b/memoria.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Análisis del rendimiento goleador de Leonel Messi**"
+    "# **Análisis del rendimiento goleador de Lionel Messi**"
    ]
   },
   {
